kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: 058264137706.dkr.ecr.sa-east-1.amazonaws.com/simplebank:ea55aed49834466fc8e8b586c7882bb39c957021
          ports:
            - containerPort: 8080
# run `kubectl apply -f kubernetes/deployment.yml` to run this file
